# mlib

./: .clang-format  CMakeLists.txt  Doxyfile  LICENSE  README  README.md  cmake_update.py  mlib-0.1.0.ebuild  mlib-9999.ebuild
cmake/: CMakeLists.txt  Compiler.cmake  FindVpx.cmake  ProjectUtils.cmake  add_application.cmake  add_library.cmake  compiler.cmake  compiler_gcc.cmake  config.cmake  dependency.cmake  general.cmake  project_utils.cmake
docs/: Doxyfile.in
examples/: example02.cpp  example_command_line_parser.cpp  example_console_parameters.cpp  example_convert.cpp  example_datetime.cpp  example_logger.cpp  example_media_file.cpp  example_proc.cpp  example_progress_bar.cpp  example_timer.cpp  example_video_reader.cpp
include/mlib/: algorithms.hpp  command_line_parser.hpp  console_parameters.hpp  convert.hpp  datetime.hpp  exception.hpp  formatter.hpp  ilogger.hpp  image.hpp  imread.hpp  imwrite.hpp  logger.hpp  media_file.hpp  memory.hpp  processor.hpp  progressbar.hpp  safe_call.hpp  timer.hpp  version.hpp  video_reader.hpp
src/: algorithms.cpp  command_line_parser.cpp  console_parameters.cpp  convert.cpp  datetime.cpp  exception.cpp  formatter.cpp  image.cpp  imread.cpp  imwrite.cpp  logger.cpp  media_file.cpp  processor.cpp  progressbar.cpp  safe_call.cpp  timer.cpp  video_reader.cpp
tests/: convert.cpp  gen_video.py  main.cpp  test_command_line_parser.cpp  test_formatter.cpp
